# RL-Social-Nav

./: CLAUDE.md  README.md  main.py
CrowdNav/crowd_nav/: test.py  train.py
CrowdNav/crowd_nav/configs/: train.config
CrowdNav/crowd_nav/policy/: cadrl.py  multi_human_rl.py
CrowdNav/crowd_nav/utils/: explorer.py  plot.py  trainer.py
presentation/: IEEEexample.bib  main.aux  main.nav  main.out  main.tex  main.toc  methodology.tex
vlm_mpc_cpp/: .gitignore  EXPERIMENTS.md  QUICK_START_EXPERIMENTS.md  README.md  TESTING_GUIDE.md  frames_2025-12-08_21.08.01.gv
vlm_mpc_cpp/docs/: CASADI_MPC_OPTIMIZATION.md  CASADI_VLM_GLOBAL_PLANNER_GUIDE.md  CLAUDE.md  COORDINATE_FRAME_COMPLETE_FIX.md  COORDINATE_FRAME_FIX_COMPLETE.md  COORDINATE_FRAME_FIX_STATUS.md  COORDINATE_FRAME_ISSUE.md  GLOBAL_PLANNER_COMPLETE.md  GLOBAL_PLANNER_IMPLEMENTATION.md  PATH_SMOOTHING_GUIDE.md  QUICK_START.md  REAL_TIME_PEOPLE_TRACKING.md  ROBOT_WORLD_POSE_FIX.md  SAFETY_IMPLEMENTATION_SUMMARY.md  SAFETY_VERIFICATION.md  VLM_INTEGRATION.md  VLM_TRIGGER_CONFIG.md  apply_vlm_modifications.sh  capture_full_prompt.py  capture_prompt.sh  casadi_mpc_presentation.tex  get_full_prompt.sh  social_mpc_nav_prompt.txt  test_new_prompt.sh  test_prompt_output.sh  test_tf_transform.py  verify_coordinates.py  view_vlm_prompt.sh  vlm_prompt_complete.txt  vlm_prompt_latest.txt  vlm_prompt_structure.drawio
vlm_mpc_cpp/rviz_config/: mpc.rviz
vlm_mpc_cpp/scripts/: PARAMETER_SWEEP_README.md  analyze_tradeoffs.py  analyze_vlm_side_bias.py  average_tests.py  check_map_occupancy.py  check_vlm_node.sh  debug_map_topic.sh  extract_metrics.py  fix_vlm_prompt_bias.md  generate_summary_report.py  install_dependencies.sh  pareto_analysis.py  run_experiments.sh  run_full_comparison.sh  run_parameter_sweep.py  run_vlm_integration.sh  test_csv_logging.sh  test_single_config.py  test_vlm_side_preference.py  test_vlm_topic.sh  visualize_comparison.py  visualize_vlm_bias.py  vlm_side_bias_test_scenarios.json
vlm_mpc_cpp/src/dwa_local_planner/: CMakeLists.txt  README.md  package.xml
vlm_mpc_cpp/src/dwa_local_planner/config/: dwa_controller.yaml
vlm_mpc_cpp/src/dwa_local_planner/launch/: dwa_controller.launch.py  dwa_with_planning.launch.py
vlm_mpc_cpp/src/dwa_local_planner/src/: dwa_controller_node.cpp  dwa_controller_pure.cpp
vlm_mpc_cpp/src/social_mpc_nav/: CMakeLists.txt  MPC_VLM_MODIFICATION_GUIDE.md  package.xml
vlm_mpc_cpp/src/social_mpc_nav/config/: README.md  crowd_state.yaml  global_planner.yaml  gt_localization.yaml  mpc_casadi_sarl.yaml  mpc_controller.yaml  mpc_crowded_scenario.yaml  mpc_sarl.yaml  navigation_params.yaml  navigation_params_jackal.yaml  people_adapter.yaml  sarl_bridge.yaml  vlm_integration_jackal.yaml  vlm_integration_official.yaml  vlm_integration_tiago_base.yaml  vlm_translator.yaml
vlm_mpc_cpp/src/social_mpc_nav/include/social_mpc_nav/: mpc_vlm_helpers.hpp  sarl_helpers.hpp  social_contract.hpp  vlm_translator.hpp
vlm_mpc_cpp/src/social_mpc_nav/launch/: mpc_casadi_full.launch.py  mpc_casadi_sarl_vlm.launch.py  mpc_jackal.launch.py  mpc_sarl_vlm.launch.py  mpc_vlm_full.launch.py  mpc_with_adapter.launch.py  mpc_with_global_planner.launch.py  social_mpc_demo.launch.py  vlm_integration.launch.py  vlm_integration_jackal.launch.py
vlm_mpc_cpp/src/social_mpc_nav/msg/: NavigationExplanation.msg  People2D.msg  Person2D.msg  SARLOutput.msg  TranslatorStatus.msg  VLMParameters.msg
vlm_mpc_cpp/src/social_mpc_nav/scripts/: sarl_bridge_node.py
vlm_mpc_cpp/src/social_mpc_nav/src/: crowd_state_node.cpp  global_planner_node.cpp  gt_localization_node.cpp  mpc_controller_casadi_node.cpp  mpc_controller_casadi_sarl_node.cpp  mpc_controller_node.cpp  mpc_controller_sarl_node.cpp  mpc_controller_vlm_node.cpp  pedestrian_logger_node.cpp  people_adapter_node.cpp  social_contract.cpp  social_contract_aggressive.cpp  vlm_integration_node.cpp  vlm_translator_node.cpp
vlm_mpc_cpp/src/social_mpc_nav/srv/: EvaluateSARLBatch.srv
