<?xml version="1.0"?>
<package format="3">
  <name>social_mpc_nav</name>
  <version>0.0.1</version>
  <description>Minimal viable social MPC navigation stack for TIAGo in Gazebo Harmonic.</description>

  <maintainer email="user@example.com">Social MPC Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>gb_visual_detection_3d_msgs</build_depend>
  <build_depend>person_tracker</build_depend>
  <build_depend>hunav_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libcurl4-openssl-dev</build_depend>
  <build_depend>gz-transport13</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>people_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>gb_visual_detection_3d_msgs</exec_depend>
  <exec_depend>person_tracker</exec_depend>
  <exec_depend>hunav_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>libcurl4</exec_depend>
  <exec_depend>gz-transport13</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

